Fixed dark mode for playlists

--- a/playlists/static/playlists/css/base.css
+++ b/playlists/static/playlists/css/base.css
@@ -1,8 +1,3 @@
-html {
-    background-color: rgb(253, 71, 0);
-    color: black;
-}
-
 @font-face {
     font-family: Noto Sans;
     src: url('../fonts/NotoSans-Regular.ttf');
@@ -11,6 +6,17 @@ html {
 @font-face {
     font-family: Noto Sans Bold;
     src: url('../fonts/NotoSans-Bold.ttf')
+}
+
+html {
+    background-color: rgb(253, 71, 0);
+    color: black;
+    font-family: Noto Sans;
+}
+
+.dark-mode-bg {
+    background-color: black;
+    color: rgb(253, 71, 0);
 }
 
 body {
@@ -44,7 +50,15 @@ a:link, a:visited {
     font-family: Noto Sans Bold;
 }
 
+.dark-mode-links:link, .dark-mode-links:visited {
+    color: rgb(253, 71, 0);
+}
+
 a:hover {
+    color: blue;
+}
+
+.dark-mode-links:hover {
     color: blue;
 }
 
